--- a/pages/blogpost.html
+++ b/pages/blogpost.html
@@ -33,7 +33,7 @@
       </label>
 
       <ul class="nav-bar">
-        <a href="../homePage.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="aboutUs .html">About Us</a>
         <a href="blogs.html">Blogs</a>
         <a href="contactUs.html">Contact Us</a>
